2010-12-27 Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mac.c New MacPaint image format reader added.

2010-12-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Default to using a LZMAPRESET
	value of 1 based on testing which observed minimal benefit, and
	substantially more cost, from larger values.  Value may be
	specified by the user using command line syntax like '-define
	tiff:lzmapreset=7' for purposes of further experimentation.  Also
	adjusted default strip memory values for each preset level.

2010-12-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/Magick.xs: Add LZMA support to PerlMagick.

	* coders/tiff.c (WriteTIFFImage): Add TIFF LZMA compressor support.

2010-12-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImages): Should send -verbose output to
	stderr rather than stdout since otherwise usage in pipelines may
	be broken.  Resolves SourceForge issue 3131790 "AVS -verbose
	prints to stdout".

2010-11-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* libtool: Upgrade to libtool 2.4.

	* coders/pnm.c (ReadPNMImage): Start work on reading NetPBM PAM
	format.  Parses PAM header but pixels are not returned yet.

	* magick/magic.c (StaticMagic): Be more specific when identifying
	PNM subformats.  Return the specific subformat name PBM, PGM, or
	PPM rather than PNM.  XV P7 format is now identified as "P7 332".
	Add detection of NetPBM PAM format.

2010-11-04  Glenn Randers-Pehrson  <glennrp@simple...>

	* magick/effect.c: Added 5x5, 6x6, and 7x7 circular ordered dither
	  patterns to create a halftone effect.

2010-09-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/options.imdoc: Document pcl:fit-to-page define.

	* coders/pcl.c: Fix issue with printing a bi-level image on
	Konica-Minolta printers.  Define pcl:fit-to-page in order for the
	printer to scale the image to fit the page.  Patch by John
	Sergeant.
